--- a/Devops_3/workflows/good_practice.yml
+++ b/Devops_3/workflows/good_practice.yml
@@ -12,9 +12,9 @@ jobs:
       - name: Check out repository code 
         uses: actions/checkout@v4
       - name: Installing python on a runner server
-        run: |
-            sudo apt-get update
-            sudo apt-get install -y python3
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.12'
       - name: Unit testing
         run: python3 -m unittest test_app.py
           
